已经基本完成！
用户认证
微服务列表发生变化的时候，主动通知各个客户端

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "git@code.aliyun.com:cloudark/cloudeer-server.git"
   },
   "author": "Xie Zhengwei <iam@xiezhengwei.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^2.9.0"
+  }
 }
